--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,3 +15,19 @@
   width: 60%;
   display: block;
 }
+.grid {
+  display: grid;
+  gap: 3px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-rows: masonry;
+}
+.color-container{
+  margin: 8px;
+  padding: 8px;
+  background-color: #fefefe;
+  border-radius: 12px;
+}
+.text-align{
+  text-align: center;
+  padding-top: 1px;
+}
